[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/ScrollingBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ScheduleMenuVersion2.gd" type="Script" id=2]
[ext_resource path="res://Winchester/buttontheme.tres" type="Theme" id=3]
[ext_resource path="res://Winchester/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Winchester/font3.tres" type="DynamicFont" id=5]
[ext_resource path="res://Winchester/arrowtheme.tres" type="Theme" id=6]

[node name="ScheduleMenuVersion2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 1 )]

[node name="Times" type="VBoxContainer" parent="."]
margin_left = 107.395
margin_top = 300.0
margin_right = 147.395
margin_bottom = 426.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Times"]
margin_right = 40.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )

[node name="Label2" type="Label" parent="Times"]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 54.0

[node name="Label3" type="Label" parent="Times"]
margin_top = 58.0
margin_right = 40.0
margin_bottom = 72.0

[node name="Label4" type="Label" parent="Times"]
margin_top = 76.0
margin_right = 40.0
margin_bottom = 90.0

[node name="Label5" type="Label" parent="Times"]
margin_top = 94.0
margin_right = 40.0
margin_bottom = 108.0

[node name="Label6" type="Label" parent="Times"]
margin_top = 112.0
margin_right = 40.0
margin_bottom = 126.0

[node name="Periods" type="VBoxContainer" parent="."]
margin_left = 290.0
margin_top = 300.0
margin_right = 330.0
margin_bottom = 404.0

[node name="Label7" type="Label" parent="Periods"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label8" type="Label" parent="Periods"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Label9" type="Label" parent="Periods"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0

[node name="Label10" type="Label" parent="Periods"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0

[node name="Label11" type="Label" parent="Periods"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 86.0

[node name="Label12" type="Label" parent="Periods"]
margin_top = 90.0
margin_right = 40.0
margin_bottom = 104.0

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 160.87
margin_top = 90.0
margin_right = 400.87
margin_bottom = 140.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Label" parent="."]
margin_left = 209.774
margin_top = 30.0
margin_right = 351.774
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Select Day"

[node name="Confirm" type="Button" parent="."]
margin_left = 190.535
margin_top = 168.4
margin_right = 370.535
margin_bottom = 218.4
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 80.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
